test/runtime/fail/import/undefined_import.hy

// expect error: Failed to resolve package `wefoij`

import "wefoij"
